--- a/assets/sass/_components/_badges.scss
+++ b/assets/sass/_components/_badges.scss
@@ -65,9 +65,9 @@
 }
 
 .ash-nazg-badge-success {
-	background: var(--pds-color-badge-indicator-success-background, #218c5f);
+	background: var(--pds-color-badge-indicator-success-background, #166534);
 	color: var(--pds-color-badge-indicator-success-foreground, #ffffff);
-	border: 1px solid var(--pds-color-badge-indicator-success-background, #218c5f);
+	border: 1px solid var(--pds-color-badge-indicator-success-background, #166534);
 }
 
 .ash-nazg-badge-error {
